--- a/todo/templates/base.html
+++ b/todo/templates/base.html
@@ -15,7 +15,9 @@
 {%block content%}
     
 {%endblock%}
+<button id="notify-btn">Allow Notification</button>
 <script src="{%static 'js/jquery.js' %}"></script>
+<script src="{%static 'js/notify.js' %}"></script>
 <script src="https://kit.fontawesome.com/cde602390a.js" crossorigin="anonymous"></script>
 {%block ExtraJS%}
     
