--- a/todo/static/css/style.css
+++ b/todo/static/css/style.css
@@ -167,13 +167,18 @@ body {
   transition: all 0.2s ease-out;
   border-top: 1px solid rgba(0, 0, 0, 0.1);
 }
+.row-timed .name{
+  color: white;
+}
+.row-timed{
+  background-color: rgba(255, 132, 132, 0.5);
+}
 #row-add{
   background-color: #F4B400;
   height: 20px;
   text-align: center;
   cursor: pointer;
 }
-
 #row-add:active{
   background-color: #ac7e01;
 }
@@ -218,6 +223,9 @@ body {
 .row:hover {
   background-color: rgba(26, 26, 26, 0.9);
   height: 65px;
+}
+.row-timed:hover{
+  background-color: rgba(104, 9, 9, 0.3);
 }
 
 @media only screen and (max-width: 767px) {
@@ -673,5 +681,62 @@ ul.more-content li {
 }
 #notify-btn:hover{
   background-color: rgba(255, 255, 255, 0.1);
+  cursor: pointer;
+}
+
+.remove{
+  text-align: center;
+}
+.remove .remove-form button{
+  background-color: transparent;
+  color: #fff;
+  text-decoration: none;
+  padding: 3px 5px;
+  border-radius: 3px;
+  border: 1px solid #fff;
+  font-size: 1rem;
+}
+.remove .remove-form button:hover{
+  color: #DB4437;
+  border: 1px solid #DB4437;
+}
+
+#notification-model{
+  position: fixed; bottom: 50px; left: 0px;
+  padding: 10px;
+  width: 250px; min-height: 100px;
+  border-radius: 3px;
+  box-shadow: 2px 2px 6px 0px rgba(0, 0, 0, 0.8);
+  background-color: rgba(255, 255, 255, 0.1);
+  border-left: 3px solid rgba(255, 255, 255, 0.1);
+  color: #fff;
+  animation: notification-slide .5s forwards linear;
+}
+@keyframes notification-slide {
+  0%{
+    left: 0px;
+  }
+  100%{
+    left: 40px;
+  }
+}
+/* 4285F4
+DB4437 */
+#notification-model .notification-title{
+  margin: 0;
+  font-size: 1rem;
+}
+#notification-model .description{
+  font-size: 0.8rem;
+  color: rgba(255, 255, 255, 0.8);
+}
+
+#notification-model .close-btn{
+  position: absolute; top: 0px; right: 0px;
+  border: none;
+  outline: none;
+  background-color: #4285F4;
+  color: #fff;
+  font-size: large;
   cursor: pointer;
 }
