--- a/todo/templates/home.html
+++ b/todo/templates/home.html
@@ -29,8 +29,13 @@
       !!!!!!!!!MAIN CONTENT!!!!!!!
       !!!!!!!!!!!!!!!!!!!!!!!!!!!!-->
   {%for todo in todos%}
-  <article class="row {% get_color %}">
-    <div class="alarm-time hidden" data-time="{{todo.time.timestamp}}" data-title="{{todo.title}}"></div>
+    {% comment %} {% if todo.timed == True %}
+      <article class="row {% get_color %} row-timed">
+    {% else %}
+      <article class="row {% get_color %}">
+    {% endif %} {% endcomment %}
+    <article class="row {% get_color %} row-alarm">
+    <div class="alarm-time hidden" data-time="{{todo.time.timestamp}}" data-title="{{todo.name}}"></div>
     <ul class="inner-row">
       <li class="checked">
         <div class="loader center hidden"><span></span></div>
@@ -60,8 +65,12 @@
       {%endif%}
           {{todo.get_priority_display}}
         </li>
-      <!-- <li>48</li>
-          <li>12:00ET</li> -->
+
+      <li class="remove">
+        <form class="remove-form" data-url="{% url 'core:TodoApiView' %}" data-index="{{forloop.counter}}" data-id="{{todo.id}}">
+          <button type="submit">Remove</button>
+        </form>
+      </li>
     </ul>
     <ul class="more-content">
       <li>{{todo.description}}</li>
@@ -107,6 +116,14 @@
   </article>
 
 </section>
+
+<div id="notification-model" class="hidden">
+  <h4 class="notification-title">TODO's time is up!</h4>
+  <hr>
+  <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. A, debitis, accusantium modi esse voluptatibus porro sunt enim eum incidunt</p>
+  <button class="close-btn">X</button>
+</div>
+
 {%endblock%}
 
 
@@ -114,4 +131,5 @@
 {%block ExtraJS%}
 <script src="{%static 'js/todo.js'%}"></script>
 <script src="{%static 'js/alarm.js'%}"></script>
+<script src="{%static 'js/remove.js'%}"></script>
 {%endblock%}
