--- a/todo/templates/todo.html
+++ b/todo/templates/todo.html
@@ -11,9 +11,9 @@
   <main class="row title">
     <ul>
       <li class="checked">Completed</li>
-      <li>ROUTINE</li>
+      <li>TODO</li>
       <li class="time">Time</li>
-      {% comment %} <li>Priority</li> {% endcomment %}
+      <li>Priority</li>
       <li>
         <i class="fas fa-bell"></i>
         <select name="alarm" id="alarm-field" required>
@@ -28,48 +28,63 @@
   <!--!!!!!!!!!!!!!!!!!!!!!!!!!!!!
       !!!!!!!!!MAIN CONTENT!!!!!!!
       !!!!!!!!!!!!!!!!!!!!!!!!!!!!-->
-  {%for routine in routines%}
+  {%for todo in todos%}
+    {% comment %} {% if todo.timed == True %}
+      <article class="row {% get_color %} row-timed">
+    {% else %}
+      <article class="row {% get_color %}">
+    {% endif %} {% endcomment %}
     <article class="row {% get_color %} row-alarm">
-    <div class="alarm-time hidden" data-time="{{routine.time.timestamp}}" data-title="{{routine.name}}"></div>
+    <div class="alarm-time hidden" data-time="{{todo.time.timestamp}}" data-title="{{todo.name}}"></div>
     <ul class="inner-row">
       <li class="checked">
         <div class="loader center hidden"><span></span></div>
-        {%if routine.checked == True%}
-          <input type="checkbox" name="checked" class="check-box" data-url="{%url 'core:RoutineApiView' %}"
-            data-id="{{routine.id}}" checked>
+        {%if todo.checked == True%}
+          <input type="checkbox" name="checked" class="check-box" data-url="{%url 'core:TodoApiView' %}"
+            data-id="{{todo.id}}" checked>
         {%else%}
-          <input type="checkbox" name="checked" class="check-box" data-url="{%url 'core:RoutineApiView' %}"
-            data-id="{{routine.id}}">
+          <input type="checkbox" name="checked" class="check-box" data-url="{%url 'core:TodoApiView' %}"
+            data-id="{{todo.id}}">
         {%endif%}
       </li>
 
-      {%if routine.checked == True%}
-        <li class="name line-through">{{routine.name}}</li>
+      {%if todo.checked == True%}
+        <li class="name line-through">{{todo.name}}</li>
       {%else%}
-        <li class="name">{{routine.name}}</li>
+        <li class="name">{{todo.name}}</li>
       {%endif%}
 
-      <li class="time">{{routine.time}}</li>
+      <li class="time">{{todo.time}}</li>
+
+      {%if todo.priority == "H"%}
+        <li class="priority-high">
+      {%elif todo.priority == "M"%}
+        <li class="priority-medium">
+      {%elif todo.priority == "L"%}
+        <li class="priority-low">
+      {%endif%}
+          {{todo.get_priority_display}}
+        </li>
 
       <li class="remove">
-        <form class="remove-form" data-url="{% url 'core:RoutineApiView' %}" data-index="{{forloop.counter}}" data-id="{{routine.id}}">
+        <form class="remove-form" data-url="{% url 'core:TodoApiView' %}" data-index="{{forloop.counter}}" data-id="{{todo.id}}">
           <button type="submit">Remove</button>
         </form>
       </li>
     </ul>
     <ul class="more-content">
-      <li>{{routine.description}}</li>
+      <li>{{todo.description}}</li>
     </ul>
   </article>
   {%endfor%}
 
   <article class="row row-form hidden {% get_color %}">
-    <form id="form" data-url="{%url 'core:RoutineApiView' %}">
+    <form id="form" data-url="{%url 'core:TodoApiView' %}">
       <ul class="inner-row">
         <li>
           <input type="submit" value="Submit">
           {% comment %} <div class="loader center hidden"><span></span></div> {% endcomment %}
-          {% comment %} <input type="checkbox" name="checked" class="check-box" data-url="{%url 'RoutineApiView' %}" data-id="{{routine.id}}"> {% endcomment %}
+          {% comment %} <input type="checkbox" name="checked" class="check-box" data-url="{%url 'TodoApiView' %}" data-id="{{todo.id}}"> {% endcomment %}
         </li>
 
         <li>
@@ -77,6 +92,13 @@
         </li>
         <li class="time">
           <input type="datetime-local" class="datefield" name="time" required>
+        </li>
+        <li>
+          <select name="priority" id="priority-field" required>
+            <option value="H">High</option>
+            <option value="M">Medium</option>
+            <option value="L">Low</option>
+          </select>
         </li>
       </ul>
       <ul class="more-content">
@@ -96,7 +118,7 @@
 </section>
 
 <div id="notification-model" class="hidden">
-  <h4 class="notification-title">Routine's time is up!</h4>
+  <h4 class="notification-title">TODO's time is up!</h4>
   <hr>
   <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. A, debitis, accusantium modi esse voluptatibus porro sunt enim eum incidunt</p>
   <button class="close-btn">X</button>
@@ -107,7 +129,7 @@
 
 
 {%block ExtraJS%}
-<script src="{%static 'js/routine.js'%}"></script>
+<script src="{%static 'js/todo.js'%}"></script>
 <script src="{%static 'js/alarm.js'%}"></script>
 <script src="{%static 'js/remove.js'%}"></script>
 {%endblock%}
